--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-**DESCRIPTION**
+#DemandForecaster
 
 This project is based on the accurate forecasting of items demand based on ARIMA models. The database used is called ESERPDemo , with data from a demo ERP. 
